# python-exercism

./: pyproject.toml
acronym/: acronym.py
anagram/: anagram.py
armstrong-numbers/: armstrong_numbers.py
binary-search/: README.md  binary_search.py  binary_search_test.py
black-jack/: black_jack.py  black_jack_test.py
bob/: bob.py
card-games/: lists.py  lists_test.py
cater-waiter/: sets.py  sets_test.py  sets_test_data.py
chaitanas-colossal-coaster/: list_methods.py  list_methods_test.py
collatz-conjecture/: collatz_conjecture.py
darts/: HELP.md  README.md  darts.py
diamond/: diamond.py
difference-of-squares/: difference_of_squares.py
dnd-character/: dnd_character.py
ellens-alien-game/: classes.py
etl/: etl.py
flatten-array/: flatten_array.py
grains/: grains.py
hamming/: hamming.py
house/: house.py
inventory-management/: dicts.py
isbn-verifier/: README.md  isbn_verifier.py
isogram/: isogram.py
leap/: leap.py
list-ops/: list_ops.py
little-sisters-essay/: string_methods.py
little-sisters-vocab/: strings.py
locomotive-engineer/: locomotive_engineer.py  locomotive_engineer_test.py
luhn/: luhn.py
making-the-grade/: loops.py
mecha-munch-management/: dict_methods.py  dict_methods_test.py
nth-prime/: nth_prime.py
pangram/: HELP.md  pangram.py
perfect-numbers/: perfect_numbers.py
phone-number/: README.md  phone_number.py
plane-tickets/: generators.py  generators_test.py
prime-factors/: prime_factors.py
protein-translation/: protein_translation.py
proverb/: proverb.py  proverb_test.py
say/: say.py  (+1 more)
(+91 files in other folders)
